syntax = "proto3";
package productPackage;
import "google/protobuf/empty.proto";

message Product{
    string id = 1;
    string title = 2;
    string price = 3;
}
message ProductId {
    string id = 1;
}
message ProductList {
    repeated Product products = 1;
}
message NewProduct {
    string title = 1;
    string price = 2;
}
message Result {
    string status = 1;
    string message = 2;
}
service ProductService {
    rpc listProduct (google.protobuf.Empty) returns (ProductList);
    rpc getProduct (ProductId) returns (Product);
    rpc createProduct (NewProduct) returns (Result);
    rpc updateProduct (Product) returns (Result);
    rpc deleteProduct (ProductId) returns (Result);
}
